    no longer needs to auto-merge.
  * init: When run in an already initalized repository, and without
    a description specified, don't delete the old description. 
  * Optimised union merging; now only runs git cat-file once, and runs
    in constant space.
  * status: Now displays trusted, untrusted, and semitrusted repositories
    separately.
  * status: Fix --json mode (only the repository lists are currently
    displayed)
  * status: --fast is back
  * Fix support for insteadOf url remapping. Closes: #644278
  * When not run in a git repository, git-annex can still display a usage
    message, and "git annex version" even works.
  * migrate: Don't fall over a stale temp file.
  * Avoid excessive escaping for rsync special remotes that are not accessed
    over ssh.

 -- Joey Hess <joeyh@debian.org>  Sat, 12 Nov 2011 14:50:21 -0400

git-annex (3.20111111) unstable; urgency=low

  * Handle a case where an annexed file is moved into a gitignored directory,
    by having fix --force add its change.
  * Avoid cyclic drop problems.
  * Optimized copy --from and get --from to avoid checking the location log
    for files that are already present.
  * Automatically fix up badly formatted uuid.log entries produced by
    3.20111105, whenever the uuid.log is changed (ie, by init or describe).
  * map: Support remotes with /~/ and /~user/

 -- Joey Hess <joeyh@debian.org>  Fri, 11 Nov 2011 13:44:18 -0400

git-annex (3.20111107) unstable; urgency=low

  * merge: Use fast-forward merges when possible.
    Thanks Valentin Haenel for a test case showing how non-fast-forward
    merges could result in an ongoing pull/merge/push cycle.
  * Don't try to read config from repos with annex-ignore set.
  * Bugfix: In the past two releases, git-annex init has written the uuid.log
    in the wrong format, with the UUID and description flipped.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Nov 2011 12:47:44 -0400

git-annex (3.20111105) unstable; urgency=low
